-----------------

- Fixed a potential crash on Unix systems without sysfs mounted.
- Fixed compilation errors when building on macOS.
  - clCreateProgramWithIL() must be compiled before and linked with poclcc and poclu.
    This is done by adding ${POCL_LIBRARY_NAME} to target_link_libraries() in CMake.
  - Fixed POCL_FAST_INIT macro; POCL_INIT_LOCK must be invoked with only one argument.


1.7 May 2021
============

Notable User Facing Changes
---------------------------

- Support for LLVM 12.
- support for cross-compiling PoCL
- Added support for the cl_nv_device_attribute_query extension on CUDA devices.
- improved support for SPIR-V binaries when using CPU device:
  - improved local variables support
  - OpenCL 2.0 atomics are now supported
  - work_group_barrier, to_local/to_global are implemented
- Implemented OpenCL 3.0 features
  - clGetDeviceInfo queries
    - CL_DEVICE_ATOMIC_MEMORY_CAPABILITIES (Minimal implementation)
    - CL_DEVICE_ATOMIC_FENCE_CAPABILITIES (Minimal implementation)

1.6 December 2020
=================

Notable User Facing Changes
---------------------------

- Support for LLVM 11.
- CUDA kernels using constant __local blocks are now ABI incompatible with
  previous release. Users need to delete their pocl cache.
- SINGLE_LLVM_LIB CMake option removed. Instead reintroduce STATIC_LLVM and
  PoCL now relies on llvm-config to provide correct shared/static libraries
  for linkage.
- improved debugging of OpenCL code with CPU driver.
  See doc/sphinx/source/debug.rst

Optimizations
-------------

- Improved the PTX code generation for __local blocks. Previously constant
  __local blocks and __local arguments were using one dynamic shared CUDA
  memory block with offsets computed at runtime. Now if there is no __local
  arguments, separate static shared CUDA memory is used. If there are
  __local arguments, the constant __local blocks are indexed with compile
  time constants. This improves the performance due to better SASS code