@@ -80,3 +80,5 @@ Roman Rusyaev <rusyaev.rm@gmail.com>
 Väinö Liukko <vaino.liukko@gmail.com>
 Nia Alarie <nia@NetBSD.org>
 fn ⌃ ⌥ (FnControlOption)
+Tom Rix <trix@redhat.com>
+
